tests/invalid/use_path_missing_module_name.wio
use combat::;

fn Entry() -> i32 {
    return 0;
}
